--- a/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
@@ -196,7 +196,7 @@
             <h1>{{ peak.name }}</h1>
 
             <!-- Score Summary -->
-            <div class="score-summary">
+            <div class="score-summary avoid-break">
                 <div>
                     <h4>PERCENTAGE</h4>
                     <p>{{ peak.score }}%</p>
