--- a/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
@@ -122,10 +122,10 @@
                 <img src="{{ STATIC_ABS }}images/collaborative-culture.png" 
                 alt="Collaborative Culture Icon">
                 <div>
-                    <strong>Collaborative Culture</strong>
-                    <p>Collaborative Culture measures the trust built, if values are being 
-                        lived out, and whether or not the vital information is flowing 
-                        both vertically and horizontally throughout the company.</p>
+                    <p><strong>Collaborative Culture</strong></br>
+                    Collaborative Culture measures the trust built, if values are being 
+                    lived out, and whether or not the vital information is flowing 
+                    both vertically and horizontally throughout the company.</p>
                 </div>
             </div>
 
@@ -133,10 +133,10 @@
                 <img src="{{ STATIC_ABS }}images/leadership-accountability.png" 
                 alt="Leadership Accountability Icon">
                 <div>
-                    <strong>Leadership Accountability</strong>
-                    <p>This area is about leaders taking responsibility for impact their 
-                        behaviour has on the rest of the company, ensuring there is 
-                        clarity from the top down.</p>
+                    <p><strong>Leadership Accountability</strong></br>
+                    This area is about leaders taking responsibility for impact their 
+                    behaviour has on the rest of the company, ensuring there is 
+                    clarity from the top down.</p>
                 </div>
             </div>
 
@@ -144,10 +144,10 @@
                 <img src="{{ STATIC_ABS }}images/strategic-momentum.png" 
                 alt="Strategic Momentum Icon">
                 <div>
-                    <strong>Strategic Momentum</strong>
-                    <p>A healthy organization develops momentum by setting and reaching 
-                        its goals together, without becoming stuck or rigid in their way 
-                        of doing things.</p>
+                    <p><strong>Strategic Momentum</strong></br>
+                    A healthy organization develops momentum by setting and reaching 
+                    its goals together, without becoming stuck or rigid in their way 
+                    of doing things.</p>
                 </div>
             </div>
 
@@ -155,10 +155,10 @@
                 <img src="{{ STATIC_ABS }}images/talent-magnetism.png" 
                 alt="Talent Magnetism Icon">
                 <div>
-                    <strong>Talent Magnetism</strong>
-                    <p>Establishing processes internally to ensure that the company 
-                        hires those who embody company values will be key for long-term 
-                        success.</p>
+                    <p><strong>Talent Magnetism</strong></br>
+                    Establishing processes internally to ensure that the company 
+                    hires those who embody company values will be key for long-term 
+                    success.</p>
                 </div>
             </div>
         </div>
