--- a/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
@@ -43,7 +43,7 @@
     <div class="title-page" style="page: cover;">
         <div class="title-top">
             <div class="title-logo">
-                <img src="{{ STATIC_ABS }}images/logo.svg" alt="Ascent Assessment for Teams"/>
+                <img src="{{ STATIC_ABS }}images/logo-square.png" alt="Ascent Assessment for Teams"/>
             </div>
             <h1 class="report-title">Final Report</h1>
             <p class="team-name">{{ team_name }}</p>
@@ -75,9 +75,9 @@
             <li><a href="#action-ideas">My Action Ideas</a></li>
             <li><a href="#commitments">Team Commitments</a></li>
         </ol>
-        </section>
+    </section>
 
-        <div class="page-break"></div>
+    <div class="page-break"></div>
 
     <!-- Introduction -->
     <section id="intro" class="intro-section">
