--- a/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
@@ -40,7 +40,7 @@
     </div>
 
     <!-- Title Page -->
-    <div class="title-page" style="page: cover;">
+    <div class="title-page avoid-break" style="page: cover;">
         <div class="title-top">
             <div class="title-logo">
                 <img src="{{ STATIC_ABS }}images/logo-square.png" alt="Ascent Assessment for Teams"/>
